# wisprch

./: .gitignore  LICENCE.md  PKGBUILD  README.md  pyproject.toml
src/wisprch/: config.py  server.py  ui.py
src/wisprchctl/: main.py
systemd/: wisprch.service
