[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wisprch"
version = "0.1.0"
description = "A minimal, configuration-driven hold-to-talk speech-to-text utility for Arch Linux"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "User", email = "user@example.com"},
]
dependencies = [
  "sounddevice",
  "openai",
  "numpy",
  "scipy",
  "PyGObject",
]

[project.scripts]
wisprch-server = "wisprch.server:main"
wisprch = "wisprchctl.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wisprch = ["sounds/*.wav"]
